tests/invalid/simple/Assign_CompileFail_1.whiley
void f():
     bool z
     z = 1
